--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,8 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
-    <color name="white">#d3d3d3</color>
+    <color name="oragne">#FFA500</color>
+    <color name="transparency">#80000000</color>
+    <color name="grey">#d3d3d3</color>
+    <color name="white">#FFFFFF</color>
 </resources>
