--- a/app/src/main/res/layout/activity_scrolling.xml
+++ b/app/src/main/res/layout/activity_scrolling.xml
@@ -59,9 +59,162 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-
             <androidx.cardview.widget.CardView
-                android:id="@+id/card_view"
+                android:id="@+id/a"
+                android:layout_width="340dp"
+                android:layout_height="200dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                app:cardCornerRadius="10dp"
+                app:cardBackgroundColor="@color/white">
+
+                <RelativeLayout
+                    android:background="@color/white"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/focus_graph"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="13dp"
+                        android:layout_marginTop="10dp"
+                        android:background="@color/white"
+                        android:gravity="start"
+                        android:text="Total Hours"
+                        android:textColor="@color/oragne" />
+
+                    <com.anychart.AnyChartView
+                        android:id="@+id/any_chart_view1"
+                        android:layout_width="250dp"
+                        android:layout_height="200dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_marginEnd="-1dp"
+                        android:gravity="end" />
+                    <ProgressBar
+                        android:id="@+id/progress_bar"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        />
+<!--                    <TextView-->
+<!--                        android:id="@+id/description"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_marginLeft="13dp"-->
+<!--                        android:layout_marginTop="170dp"-->
+<!--                        android:background="@color/white"-->
+<!--                        android:gravity="bottom"-->
+<!--                        android:text="3 Hours"-->
+<!--                        android:textColor="@color/black"-->
+<!--                        android:textStyle="bold" />-->
+                </RelativeLayout>
+            </androidx.cardview.widget.CardView>
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="138dp"
+                android:layout_height="wrap_content"
+                android:paddingLeft="30dp"
+                android:text="Abstract"
+                android:textSize="25dp"
+                android:paddingTop="20dp"
+                android:textStyle="bold" />
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingTop="15dp"
+                android:paddingLeft="27dp"
+                android:paddingRight="27dp">
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/time_card"
+                    android:layout_width="160dp"
+                    android:layout_height="200dp"
+                    android:layout_gravity="start"
+                    app:cardBackgroundColor="@color/white"
+                    app:cardCornerRadius="10dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@color/white">
+
+                        <TextView
+                            android:id="@+id/focus_title"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="13dp"
+                            android:layout_marginTop="10dp"
+                            android:background="@color/white"
+                            android:gravity="start"
+                            android:text="Focus Time"
+                            android:textColor="@color/oragne" />
+
+                        <TextView
+                            android:id="@+id/focus_description"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="13dp"
+                            android:layout_marginTop="170dp"
+                            android:background="@color/white"
+                            android:gravity="bottom"
+                            android:text="13 time(s)"
+                            android:textColor="@color/black"
+                            android:textStyle="bold" />
+
+
+                    </RelativeLayout>
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/streak_card"
+                    android:layout_width="160dp"
+                    android:layout_height="200dp"
+                    android:layout_gravity="end"
+                    app:cardBackgroundColor="@color/white"
+                    app:cardCornerRadius="10dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/time_card">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@color/white">
+
+                        <TextView
+                            android:id="@+id/streak_title"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="13dp"
+                            android:layout_marginTop="10dp"
+                            android:background="@color/white"
+                            android:gravity="start"
+                            android:text="Day Streak"
+                            android:textColor="@color/oragne" />
+
+                        <TextView
+                            android:id="@+id/streak_description"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="13dp"
+                            android:layout_marginTop="170dp"
+                            android:background="@color/white"
+                            android:gravity="bottom"
+                            android:text="1 time(s)"
+                            android:textColor="@color/black"
+                            android:textStyle="bold" />
+                    </RelativeLayout>
+                </androidx.cardview.widget.CardView>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+            <androidx.cardview.widget.CardView
+                android:id="@+id/hours_card"
                 android:layout_width="340dp"
                 android:layout_height="200dp"
                 android:layout_gravity="center"
