--- a/app/src/main/res/menu/menu_scrolling.xml
+++ b/app/src/main/res/menu/menu_scrolling.xml
@@ -3,10 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.mobileux5.ScrollingActivity"
     android:background = "@color/white">
-    <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never"
-        />
+<!--    <item-->
+<!--        android:id="@+id/action_settings"-->
+<!--        android:orderInCategory="100"-->
+<!--        android:title="@string/action_settings"-->
+<!--        app:showAsAction="never"-->
+<!--        />-->
 </menu>
