--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="oragne">#FFA500</color>
     <color name="transparency">#80000000</color>
-    <color name="grey">#d3d3d3</color>
+    <color name="grey">#e5e3e8</color>
     <color name="white">#FFFFFF</color>
 </resources>
